# pausa

./: .gitignore  .releaserc.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: build-macos-only.yml  build.yml  ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_models.rs  app.rs  config.rs  cycle_orchestrator.rs  errors.rs  hotkey_manager.rs  lib.rs  main.rs  menu_bar_text.rs  notification_service.rs  onboarding.rs  pkce.rs  state.rs  state_manager.rs  window_manager.rs
src-tauri/src/database/: README.md  connection.rs  migrations.rs  mod.rs  models.rs  schema.rs  tests.rs
src-tauri/src/domain/: mod.rs  oauth.rs  tokens.rs
src-tauri/src/handlers/: auth_handler.rs  cycle_config_handler.rs  cycle_handler.rs  mod.rs  notification_handler.rs  onboarding_handler.rs  stats_handler.rs  strict_mode_handler.rs  telemetry_handler.rs  work_schedule_handler.rs
src-tauri/src/infra/: deeplink.rs  mod.rs
src-tauri/src/onboarding/: backup.rs  validation.rs
src-tauri/src/services/: google_oauth.rs  mod.rs  pkce.rs  telemetry.rs
src-tauri/src/strict_mode/: mod.rs  models.rs  orchestrator.rs  system_lock_manager.rs
src/components/: BreakActivitySettings.tsx  BreakOverlay.tsx  BreakTransitionWindow.tsx  CommandPalette.tsx  CycleControl.tsx  CycleSync.tsx  EmergencyOverride.tsx  ErrorBoundary.tsx  FocusWidget.tsx  MenuBarPopover.tsx  OnboardingWizard.tsx  Settings.tsx  StatsModal.tsx  TauriCommandTest.tsx  ToastContainer.tsx
(+40 files in other folders)
