[package]
name = "pausa"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pausa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0.5", features = [] }
tauri-plugin-shell = "2.0"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
bcrypt = "0.15"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5"
warp = "0.3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
async-trait = "0.1"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.8"

